@@ -327,6 +327,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MX927  (EXPERIMENTAL)
        Canon PIXMA MX928  (EXPERIMENTAL)
 
+       Canon PIXMA E510   (EXPERIMENTAL)
+
        Note: Area codes as follows:
              1: Latin America
              2: USA
